--- a/src/app/home/diet/components/calorie-counter/calorie-counter.component.html
+++ b/src/app/home/diet/components/calorie-counter/calorie-counter.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center mt-5">
   <h2>Meal to track</h2>
-  <div class="mt-3">
+  <div class="mt-3 mb-3">
     <div class="card" style="width: 18rem; display: inline-block; margin: 30px">
       <img
         src="https://www.visittnt.com/blog/wp-content/uploads/2017/09/maxresdefault-1.jpg"
@@ -8,6 +8,7 @@
         alt="breakfast"
         height="200px"
         width="200px"
+        style="filter: saturate(125%)"
       />
       <div class="card-body">
         <h5 class="card-title">Breakfast</h5>
@@ -16,7 +17,7 @@
           routerLinkActive="active"
           [routerLink]="['/diet/addFood']"
           [queryParams]="{ type: 'breakfast' }"
-          class="btn btn-primary"
+          class="btn"
           >Update</a
         >
       </div>
@@ -28,6 +29,7 @@
         alt="lunch"
         height="200px"
         width="200px"
+        style="filter: saturate(125%)"
       />
       <div class="card-body">
         <h5 class="card-title">Lunch</h5>
@@ -36,7 +38,7 @@
           routerLinkActive="active"
           [routerLink]="['/diet/addFood']"
           [queryParams]="{ type: 'lunch' }"
-          class="btn btn-primary"
+          class="btn"
           >Update</a
         >
       </div>
@@ -48,6 +50,7 @@
         alt="breakfast"
         height="200px"
         width="200px"
+        style="filter: saturate(125%)"
       />
       <div class="card-body">
         <h5 class="card-title">Dinner</h5>
@@ -56,7 +59,7 @@
           routerLinkActive="active"
           [routerLink]="['/diet/addFood']"
           [queryParams]="{ type: 'dinner' }"
-          class="btn btn-primary"
+          class="btn"
           >Update</a
         >
       </div>
