--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,3 +1,131 @@
-.bStyle{
-    margin: 10px;
+.content {
+  background-color: moccasin;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: rgba(15, 13, 13, 0.6);
+  background-blend-mode: darken;
+  background-image: url("https://c0.wallpaperflare.com/preview/906/427/616/meal-healthy-eating-health-minimal.jpg");
+}
+.inner-content {
+  padding-top: 78px;
+  padding-bottom: 78px;
+  padding-left: 185px;
+  padding-right: 185px;
+}
+.form-control:focus {
+  box-shadow: none;
+  border-color: rgb(26, 136, 26);
+}
+.form-control {
+  height: 30px;
+}
+input[type="text"] {
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.row {
+  --bs-gutter-x: 0;
+  background-color: rgb(249, 251, 253);
+}
+
+.check-input {
+  margin-right: 10px;
+  margin-left: 10px;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+}
+input:read-only {
+  background-color: white;
+}
+.card-header {
+  background-color: white;
+  color: green;
+  font-weight: bold;
+  font-family: sans-serif;
+  height: 50px;
+  padding-top: 15px;
+}
+.form-select {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-radius: 0%;
+  width: 207px;
+  font-size: 17px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.form-select:focus {
+  box-shadow: none;
+  border-color: rgb(10, 138, 10);
+}
+.save-button {
+  background: rgb(10, 138, 10);
+  box-shadow: none;
+  border: none;
+  color: white;
+}
+
+.save-button:disabled {
+  background: rgb(58, 170, 58);
+  box-shadow: none;
+  border: none;
+  color: white;
+}
+
+.save-button:hover {
+  background: rgb(26, 136, 26);
+}
+
+.save-button:focus {
+  background: rgb(26, 136, 26);
+  box-shadow: none;
+}
+
+.save-button:active {
+  background: rgb(26, 136, 26);
+  border: 1px solid white;
+  box-shadow: none;
+}
+.invalid {
+  color: red;
+  margin-left: 12px;
+  font-size: 12px;
+  margin-top: 3px;
+}
+label {
+  padding-top: 10px;
+  color: rgb(102, 101, 101);
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+h6 {
+  color: darkgray;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;
+}
+.container {
+  padding-right: 0;
+  padding-bottom: 10px;
+  background-color: white;
+}
+
+p {
+  margin-top: 18px;
+  font-size: 14px;
+  color: rgb(131, 130, 130);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+a {
+  text-decoration: none;
+  color: green;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
