--- a/src/app/home/admin/components/food/food.component.css
+++ b/src/app/home/admin/components/food/food.component.css
@@ -3,7 +3,7 @@
   background-color: white;
   border-radius: 5px;
   padding-top: 0%;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 .edit-button-icon:hover {
   background-color: green;
@@ -17,6 +17,15 @@
 .edit-icon:hover {
   background-color: green;
   color: white;
+}
+.btn-outline-success {
+  background-color: rgb(248, 252, 248);
+  color: black;
+}
+.btn-outline-success:hover {
+  background-color: green;
+  color: white;
+  font-weight: 500;
 }
 .remove-button-icon {
   border: 1px solid rgb(180, 5, 5);
@@ -39,7 +48,7 @@
 }
 h5 {
   font-size: 19px;
-  color: gray;
+  color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding-left: 60px;
   padding-top: 10px;
@@ -49,4 +58,35 @@ h5 {
 }
 .btn-outline-success:focus {
   box-shadow: none;
+}
+.content {
+  height: 2100px;
+  width: 100%;
+  background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
+  background-attachment: fixed;
+  background-size: cover;
+}
+.container {
+  margin-top: 20px;
+  position: absolute;
+  margin-left: 60px;
+}
+table {
+  background-color: #0a0a0ab3;
+  color: white;
+}
+thead {
+  background-color: white;
+  color: #137113;
+  border: 1px solid black;
+}
+.table {
+  --bs-table-bg: transparent;
+  --bs-table-accent-bg: transparent;
+  --bs-table-striped-color: #f8f9fa;
+  --bs-table-striped-bg: rgb(121 154 66 / 43%);
+  --bs-table-active-color: #f8f9fa;
+  --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+  --bs-table-hover-color: #212529;
+  --bs-table-hover-bg: #f8f9faba;
 }
