--- a/src/app/home/components/footer/footer.component.css
+++ b/src/app/home/components/footer/footer.component.css
@@ -1,15 +1,18 @@
-footer {
+.footer {
   padding: 7px;
-  background-color: darkgrey;
   position:relative; 
+  background-color: darkgrey;
   bottom: 0;
   right: 0;
   width: 100%;
   padding-left: 75%;
+  height: 50px;
 }
 .stickRight {
-  right: 0;
+  float: right;
+  padding-right: 2rem;
   font-family: "cursive";
   font-weight: bold;
   font-size: larger;
 }
+
