--- a/src/app/home/user/components/detail/detail.component.css
+++ b/src/app/home/user/components/detail/detail.component.css
@@ -1,55 +1,125 @@
-/* body {
-    background: rgb(99, 39, 120)
-} */
-
 .form-control:focus {
   box-shadow: none;
-  border-color: #ba68c8;
+}
+.form-control {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  border-radius: 0%;
+  height: 40px;
+  width: max-content;
+}
+.form-range{
+  height: 40px;
+}
+label {
+  padding-top: 10px;
+  color: white;
+}
+.check-input {
+  margin-right: 10px;
+  margin-left: 10px;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  border: 1px solid red;
+}
+input:read-only {
+  background-color: #6e985680;
+  color: white;
+}
+input {
+  background-color: #6e985680;
+  color: white;
+}
+.card-header {
+  background-color: white;
+  color: green;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+.form-select {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  background-color: #6e985680;
+  color: white;
+  border-radius: 0%;
+  width: 207px;
+}
+.form-select:focus {
+  box-shadow: none;
+  border-color: green;
 }
 
-.profile-button {
-  background: rgb(99, 39, 120);
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: rgb(126, 177, 59);
+  box-shadow: none;
+}
+
+.save-button {
+  margin-left: 270px;
+  background: green;
   box-shadow: none;
   border: none;
-}
-
-.profile-button:hover {
-  background: #5f1c6b;
-}
-
-.profile-button:focus {
-  background: #682773;
-  box-shadow: none;
-}
-
-.profile-button:active {
-  background: #682773;
-  box-shadow: none;
-}
-
-.back:hover {
-  color: #682773;
-  cursor: pointer;
-}
-
-input {
-  font-size: 13px;
-}
-
-.unit{
-  margin: 13px 9px 0px 9px;
-  width: 40px;
-  border: 0.5px solid black;
-  border-radius: 10%;
-  background-color:#c47cd1 ;
-}
-
-.unit-clicked{
-  background-color: #682773;
   color: white;
 }
 
-.form-label{
-  font-weight: 300;
-  font-size: 13px;
+.save-button:disabled {
+  margin-left: 282px;
+  background: rgb(87, 179, 87);
+  box-shadow: none;
+  border: none;
+  color: white;
+}
+
+.save-button:hover {
+  background: rgb(73, 168, 73);
+}
+
+.save-button:focus {
+  background: rgb(69, 165, 69);
+  box-shadow: none;
+}
+
+.save-button:active {
+  background: rgb(67, 161, 67);
+  border: 1px solid white;
+  box-shadow: none;
+}
+
+.invalid {
+  color: #ffc800;
+}
+
+.container {
+  width: 69%;
+  position: absolute;
+  padding-left: 40px;
+  padding-right: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #0c0c0cab;
+  margin-top: 40px;
+  margin-left: 180px;
+}
+
+.content {
+  height: 553px;
+  width: 100%;
+  background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.range-value {
+  color: white;
+  border-radius: 10%;
+  margin-left: 270px;
+  margin-top: 10px;
+  width: fit-content;
+  padding: 3px;
 }
