--- a/src/app/home/user/components/goal/goal.component.css
+++ b/src/app/home/user/components/goal/goal.component.css
@@ -1,49 +1,92 @@
 .form-range {
   width: 500px;
 }
+
 .card {
-  width: 18rem;
+  width: 22rem;
   align-items: center;
-  margin: 20px;
-  margin-left: 90px;
+  background-color: #0c0c0cb5;
+  margin-bottom: 20px;
+  padding: 5px;
+  margin-left: 32px;
+  border: none;
+  color: white;
 }
+
 .container {
-  align-items: center;
-  width: 40%;
+  width: 35%;
+  padding-bottom: 40px;
+  background-color: #0c0c0cb5;
+  margin-top: 65px;
+  margin-left: 400px;
+  position: absolute;
 }
-.card-title {
-  color: #682773;
+
+.content {
+  height: 553px;
+  width: 100%;
+  background-image: url("https://th.bing.com/th/id/R.7689c5513084cd3ae199cec4f9b84af3?rik=epCX11FOp%2bUvgQ&riu=http%3a%2f%2fsfwallpaper.com%2fimages%2fbackground-food-7.jpg&ehk=OyOpA7JOvJ5kSZoKblkX96cNQ3uiu%2fHJUTOzI7b3j6o%3d&risl=&pid=ImgRaw&r=0");
+  background-attachment: fixed;
+  background-size: cover;
 }
+
+input[type="range"] {
+  width: 300px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: green;
+  box-shadow: none;
+}
+
+h5 {
+  color: cornsilk;
+  font-weight: bolder;
+  font-family: "Times New Roman", Times, serif;
+}
+
 .normal {
   align-items: center;
-  border: 1px solid green;
-  background-color: rgb(200, 238, 200);
+  background-color: rgb(228 251 228 / 38%);
 }
+
 .under {
   align-items: center;
-  border: 1px solid orange;
-  background-color: rgb(255, 243, 223);
+  background-color: rgb(255 243 223 / 33%);
 }
+
 .over {
   align-items: center;
-  border: 1px solid red;
-  background-color: rgb(247, 187, 187);
+  background-color: rgb(234 181 181 / 39%);
 }
-.profile-button {
-  background: rgb(99, 39, 120);
+
+.save-button {
+  background: #40c740;
   box-shadow: none;
   border: none;
-}
-.profile-button:hover {
-  background: #682773;
+  color: white;
+  width: 150px;
 }
 
-/* .profile-button:focus {
-  background: #682773;
-  box-shadow: #bf7dca;
-} */
+.save-button:disabled {
+  background: rgb(67, 153, 67);
+  box-shadow: none;
+  border: none;
+  color: white;
+}
 
-.profile-button:active {
-  background: #682773;
-  box-shadow: #bf7dca;
+.save-button:hover {
+  background: rgb(51, 153, 51);
+}
+
+.save-button:focus {
+  background: rgb(54, 167, 54);
+  box-shadow: none;
+}
+
+.save-button:active {
+  background: rgb(49, 148, 49);
+  border: 1px solid white;
+  box-shadow: none;
 }
