--- a/src/app/home/user/components/user/user.component.css
+++ b/src/app/home/user/components/user/user.component.css
@@ -1,6 +1,6 @@
 .form-control:focus {
   box-shadow: none;
-  border-color: #ba68c8;
+  border-color: green;
 }
 .form-control {
   border-top: none;
@@ -11,7 +11,7 @@
   width: max-content;
 }
 label {
-  padding-top: 10px;
+  padding-top: 6px;
   color: grey;
 }
 .check-input {
@@ -24,12 +24,8 @@ label {
 input:read-only {
   background-color: white;
 }
-/* .input[type="radio"]:checked::after{
-    background: #ba68c8;
-    border-color: #ba68c8;
-} */
 .card-header {
-  background-color: #841f96;
+  background-color: green;
   color: white;
   font-weight: bold;
   font-family: sans-serif;
@@ -43,47 +39,62 @@ input:read-only {
 }
 .form-select:focus {
   box-shadow: none;
-  border-color: #ba68c8;
+  border-color: green;
 }
 .save-button {
   margin-left: 282px;
-  background: #841f96;
+  background: green;
+  box-shadow: none;
+  border: none;
+  color: white;
+}
+
+.save-button:disabled {
+  margin-left: 282px;
+  background: rgb(54, 153, 54);
   box-shadow: none;
   border: none;
   color: white;
 }
 
 .save-button:hover {
-  background: #ae58bd;
+  background: rgb(37, 138, 37);
 }
 
 .save-button:focus {
-  background: #841f96;
+  background: green;
   box-shadow: none;
 }
 
 .save-button:active {
-  background: #841f96;
+  background: green;
   border: 1px solid white;
   box-shadow: none;
 }
 .close-button-icon {
-  border: 1px solid #841f96;
+  border: 1px solid green;
   background-color: white;
   border-radius: 5px;
   padding-top: 0%;
   float: right;
 }
 .close-button-icon:hover {
-  background-color: #841f96;
+  background-color: green;
   border: 1px solid white;
 }
 .close-button-icon:hover .close-icon {
   color: white;
 }
 .close-icon {
-  color: #841f96;
+  color: green;
 }
 .close-icon:hover {
   color: white;
+}
+.invalid {
+  color: red;
+  font-size: 14px;
+}
+.form-control.ng-invalid {
+  border-color: red;
 }
